Bug 103915 - UI: Sidebar unreadable in GTK3 in Ubuntu
Summary: UI: Sidebar unreadable in GTK3 in Ubuntu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-11-13 21:01 UTC by Luke
Modified: 2016-11-24 09:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Shows issue with the sidebar and Ubuntu Ambiance theme (57.23 KB, image/png)
2016-11-13 21:09 UTC, Luke
Details
screencopy of the master under Ubuntu 16.10 with Ambiance theme (54.35 KB, image/png)
2016-11-14 05:54 UTC, Jean-Baptiste Faure
Details
Screenshot showing the toolbar icons are now not legible (51.29 KB, image/png)
2016-11-15 22:49 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2016-11-13 21:01:53 UTC
Description:
With Ubuntu 14.4 and 16.4 the sidebar is impossible to read because it gray text on gray background.

Steps to Reproduce:
1. Launch any LibreOffice application with a recent build under Ubuntu

Actual Results:  
gray text on gray background

Expected Results:
black text on gray background. Better yet, white text on black background like the rest of the UI.


Reproducible: Always

User Profile Reset: No

Additional Info:
Build ID: 3287bc2f91438085b7604773d5e0346fc3c3f452 - GOOD
Build ID: c67b55db4adad67a8584b00f88b7ed296ba15846 - BAD


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 Luke 2016-11-13 21:09:26 UTC
Created attachment 128735 [details]
Shows issue with the sidebar and Ubuntu Ambiance theme
Comment 2 Luke 2016-11-14 03:09:02 UTC
Also affects 16.10.
Comment 3 Jean-Baptiste Faure 2016-11-14 05:54:38 UTC
Created attachment 128737 [details]
screencopy of the master under Ubuntu 16.10 with Ambiance theme

I do not reproduce exactly the problem with my build of the master under Ubuntu 16.10 x86-64, but there is several glitches:
- selected icons are black
- widget +/- : the +/- is not white and make the widget awful
- scrollbar are too wide, but, there, the problem may be in the Ubuntu implementation of GTK3 because I see the same thing for Firefox.

Best regards. JBF
Comment 4 Xisco Faulí 2016-11-14 10:15:18 UTC
Confirmed in

Version: 5.3.0.0.alpha1+
Build ID: fef32a42c8bd8fd640d6c9cdc2f839fb43ad490c
CPU Threads: 4; OS Version: Linux 4.8; UI Render: GL; VCL: gtk3; Layout Engine:
new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 5 Xisco Faulí 2016-11-14 11:01:54 UTC
Regression introduced by

author	Caolán McNamara <caolanm@redhat.com>	2016-10-19 11:57:09 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-10-19 11:59:19 (GMT)
commit 75544eb042ab3fc79dd6104749a32af7e180c116 (patch)
tree 07400d06d84da98f2b68e190c6197f22568f74c9
parent 42e89217fb3b8bda7cc084c8e14ba56efa8eae3f (diff)

Resolves: tdf#102778 by default use breeze_dark when dark themes are requested
Under gtk3 if gtk-application-prefer-dark-theme is enabled or the requested
icon-theme name ends in [-|_]dark

Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2016-11-14 13:47:51 UTC
looks like falling back to the breeze_dark icon set if the desired icon set happens to end in dark (Ubuntu-mono-dark in the 16.04 case anyway) and is unavailable is a bad idea then.
Comment 7 Commit Notification 2016-11-14 13:52:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e32e575829160b3c51ebbb67231baec7135afd3

Resolves: tdf#103915 when global dark theme is set fall back to breeze_dark

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Luke 2016-11-15 22:49:57 UTC
Created attachment 128772 [details]
Screenshot showing the toolbar icons are now not legible

With Version: 5.3.0.0.alpha1+
Build ID: 5f293414d62ac93fc150a44f070980a808469ab1

The sidebar icons can now be read, but the toolbar icons are now illegible as they are gray text on a dark gray background. For this theme to work, we need

Toolbar: white text on dark gray background. 
Sidebar: black text on light gray background. 

Are we even correctly reading Ubuntu's theme? Do they really intend a light gray sidebar with a dark gray toolbar?
Comment 9 Luke 2016-11-16 02:03:14 UTC
Did some more research on the Ambience theme and my expressed preference for a dark sidebar fix is wrong. The theme specifies light panels/sidebars with dark fonts. Only the toolbars, top of dialogs, and context menus should be dark.
Comment 10 Caolán McNamara 2016-11-16 13:46:04 UTC
Soem bug creep here, the original bug is "the sidebar is impossible to read" and identified a commit of mine as a regression. That regression is fixed I think.

The outcome that the breeze icon set is selected by default under unity isn't my doing, that's since bug #92458 where "breeze" was selected if the desktop environment is "unity".

We don't (currently at least) have technology to change or recolorize the icons depending on the background context color.

glade is a native gtk3 app with a toolbar and a panel, I see on looking at it under this theme that the toolbar is not dark, but light. Dark toolbars seem to be set if GTK_STYLE_CLASS_PRIMARY_TOOLBAR is on

downstream in Ubuntu, https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/1580537 Bjoern seems to have effectively turned off the darkness of the LibreOffice toolbars with a "libreoffice-toolbar" style hack

The best solution I can see for now is to go Bjoerns direction to end up with toolbars on which breeze icons can be seen.
Comment 11 Commit Notification 2016-11-16 13:54:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=739c9780f003bf2628713f04d6e0d20451f14dfb

Related: lp#1580537 tdf#103915 don't set toolbars as primary

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2016-11-16 13:57:00 UTC
I think that's best as we can do for now.
Comment 13 Jean-Baptiste Faure 2016-11-17 05:47:20 UTC
(In reply to Caolán McNamara from comment #12)
> I think that's best as we can do for now.

It works as expected in my own build of Version: 5.3.0.0.alpha1+
Build ID: 234325b9fc0d54e594de8e5d2e7c717684db1745
Threads CPU : 4; Version de l'OS :Linux 4.8; UI Render : par défaut; VCL: gtk3; Layout Engine: new; 
Ubuntu_16.10_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: group

Thank you very much.
Best regards. JBF
Comment 14 Commit Notification 2016-11-24 09:48:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=230283a6433551cb8c575cc30aa956ede8c1146b&h=libreoffice-5-2

Related: lp#1580537 tdf#103915 don't set toolbars as primary

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.