Resolves: tdf#103915 when global dark theme is set fall back to breeze_dark

otherwise don't assume a desired iconset ending in *dark means breeze_dark
is a good fallback

Change-Id: Ia294a86e17a2c390b503d5200dfc7195759afa00